@@ -1,5 +1,9 @@
 2009-08-04 Richard Frith-Macdonald <rfm@gnu.org>
 
+	* Tools/AGSHtml.m: Escape non-ascii characters etc in author.
+
+2009-08-04 Richard Frith-Macdonald <rfm@gnu.org>
+
 	* Source/NSPropertyList.m: Fix for handling empty key values in
 	XML property lists.
 
